Only for java6/java7